lustre/mdt/mdt_handler.c
@@ -683,9 +683,9 @@ int mdt_attr_get_complex(struct mdt_thread_info *info,
 	const struct lu_env *env = info->mti_env;
 	struct md_object    *next = mdt_object_child(o);
 	struct lu_buf       *buf = &info->mti_buf;
-	u32                  mode = lu_object_attr(&next->mo_lu);
 	int                  need = ma->ma_need;
 	int                  rc = 0, rc2;
+	u32                  mode;
 	ENTRY;
 
 	ma->ma_valid = 0;
@@ -697,6 +697,8 @@ int mdt_attr_get_complex(struct mdt_thread_info *info,
 			GOTO(out, rc);
 		ma->ma_valid |= MA_INODE;
 	}
+
+	mode = ma->ma_attr.la_mode;
 
 	if (need & MA_PFID) {
 		rc = mdt_attr_get_pfid(info, o, &ma->ma_pfid);
